fix: create title into a h1 and fix contrast

--- a/css/style.css
+++ b/css/style.css
@@ -47,17 +47,13 @@ header {
     position:relative;
 }
 
-.splash-text {
-    padding: 0 0.5em;
-    color: #FFF;
-    font-size: 76px;
-    font-weight: 500;
-    max-width: 1280px;
-    margin: 0 auto;
-    padding-top: 4.5em;
-    line-height: 0.9em;
-    text-shadow: 2px 0px 15px rgb(107, 107, 107);
-}
+h1 {
+  margin: 0;
+  padding: 0 0.5em;
+  font-size: 3em;
+  font-weight: 500;
+  text-align: center;
+  }
 
 .splash-event {
     display: inline-block;
@@ -161,7 +157,6 @@ p {
     font-weight: 100;
 }
 
-h1,
 h2,
 strong {
   color: #333;
@@ -368,9 +363,7 @@ a.post-more {
 	p {
 		font-size:16px;
 	}
-	.splash-text {
-		font-size:30px;
-	}
+
 	.site-splash {
 		height:200px;
 	}
